# ai-code-review-agent

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: __init__.py
dashboard/: app.py
src/agent/: __init__.py  graph.py  main.py  nodes.py
src/eval/: __init__.py
src/github_client/: __init__.py  client.py
src/models/: __init__.py  findings.py
src/prompts/: __init__.py  review_prompt.py
tests/: __init__.py
